# ClipboardCopyLinux

./: CMakeLists.txt  README.md
src/: clipboard_gtk.c  clipboard_wayland_x11.c
